Simplified reading the resource